# smg

./: Cargo.toml  ROUTED_EXPERTS_IMPLEMENTATION_COMPLETE.md
bindings/golang/src/: grpc_converter.rs
bindings/python/src/: lib.rs
bindings/python/src/smg/: router.py  router_args.py
bindings/python/tests/: test_arg_parser.py  test_router_config.py  test_validation.py
crates/grpc_client/proto/: common.proto  vllm_engine.proto
crates/grpc_client/python/: pyproject.toml
crates/grpc_client/src/: lib.rs  sglang_scheduler.rs  trtllm_service.rs  vllm_engine.rs
crates/kv_index/src/: lib.rs  tiered_indexer.rs
crates/protocols/src/: chat.rs  completion.rs  generate.rs  lib.rs  npy.rs  sampling_params.rs  worker.rs
crates/protocols/src/builders/chat/: response.rs  (+1 more)
crates/psrl_state/: Cargo.toml  build.rs
crates/psrl_state/proto/: psrl_manager.proto
crates/psrl_state/python/: .gitignore  README.md  pyproject.toml  setup.py
crates/psrl_state/python/psrl_state_grpc_proto/: __init__.py
crates/psrl_state/src/: lib.rs  psrl_manager.rs
crates/tito/: Cargo.toml
crates/tito/src/: engine.rs  error.rs  lib.rs  model_adapter.rs  normalizer.rs  store.rs  validator.rs
grpc_servicer/smg_grpc_servicer/vllm/: __init__.py  kv_event_replay.py  preemption.py  servicer.py
grpc_servicer/tests/: test_preemption_integration.py  test_preemption_stat_logger.py  test_vllm_kv_event_replay.py
model_gateway/: Cargo.toml
model_gateway/benches/: routing_loop_bench.rs
model_gateway/src/: app_context.rs  main.rs  server.rs  service_discovery.rs
model_gateway/src/config/: builder.rs  types.rs  validation.rs
model_gateway/src/core/: mod.rs  worker.rs  worker_builder.rs  worker_service.rs
model_gateway/src/observability/: logging.rs  metrics.rs
model_gateway/src/policies/: cache_aware.rs  cache_aware_v1.rs  completion_guard.rs  cost_model_utils.rs  factory.rs  load_aware.rs  manual.rs  mod.rs  power_of_two.rs  prefix_hash.rs  registry.rs  request_num_balance.rs  throughput_optimal.rs
model_gateway/src/routers/: factory.rs  mod.rs  request_queue.rs  router_manager.rs  routing_loop_utils.rs
model_gateway/src/routers/grpc/: client.rs  context.rs  kv_transfer.rs  mod.rs  multimodal.rs  partial_rollout.rs  pd_router.rs  pipeline.rs  pipeline_routing_loop.rs  preemption_subscriber.rs  proto_wrapper.rs  router.rs  routing_loop.rs  worker_selection.rs
model_gateway/src/routers/http/: pd_router.rs  router.rs
model_gateway/src/worker/: builder.rs  kv_event_monitor.rs  mod.rs  registry.rs  routing_control.rs  service.rs  stats.rs  weight_version.rs  worker.rs
model_gateway/tests/: routed_experts_multiturn_tests.rs
model_gateway/tests/common/: mod.rs  test_config.rs
model_gateway/tests/routing/: cache_aware_backward_compat_test.rs  load_aware_policy_test.rs  mod.rs  routing_loop_test.rs  test_openai_routing.rs  test_pd_routing.rs  worker_management_test.rs
model_gateway/tests/routing_loop/: mod.rs  tests_partial_rollout.rs  tests_phase1.rs  tests_phase2.rs  tests_phase3.rs  tests_phase4.rs  tests_phase5.rs  tests_phase6.rs  tests_sync_flow.rs
(+62 files in other folders)
