[package]
name = "smg-tito"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
blake3.workspace = true
dashmap.workspace = true
parking_lot = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
openai-protocol = { workspace = true, features = ["axum"] }
llm-tokenizer.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
