[build-system]
requires = ["setuptools>=68.0", "grpcio-tools>=1.60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psrl-state-grpc-proto"
dynamic = ["version"]
description = "PSRL state gRPC proto definitions and generated Python stubs"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "PSRL Contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["psrl_state_grpc_proto*"]

[tool.setuptools.dynamic]
version = { attr = "psrl_state_grpc_proto.__version__" }

[tool.setuptools.package-data]
psrl_state_grpc_proto = ["proto/*.proto", "generated/*.py", "generated/*.pyi"]
